Fix border alignment at bottom of pageheader actions

--- a/style.css
+++ b/style.css
@@ -26,9 +26,9 @@ body
     display: block;
 }
 
-.pageheader .actions ul
+.pageheader .actions
 {
-    border-bottom: 1px solid #000;
+    border-bottom: thin solid black;
 }
 
 .inlinepage .actions ul
